removed strikethrough showing while editing

--- a/Assignments/JS/To-do-list/index.html
+++ b/Assignments/JS/To-do-list/index.html
@@ -24,8 +24,7 @@
                 <input type="text" id="input" placeholder="Task: Buy a new textbook">
                 <button id="submitBtn">Submit</button>
             </div>
-            <div id="second-area">
-            </div>
+            <div id="second-area"></div>
         </div>
     </div>
     
