each section has its own independent and working to-do list

--- a/Assignments/JS/To-do-list/index.html
+++ b/Assignments/JS/To-do-list/index.html
@@ -12,11 +12,11 @@
         <div class="top-bar">TO-DO LIST</div>
         <div class="side-bar">
             <ul>
-                <li>Home</li>
-                <li>Today</li>
-                <li>Week</li>
-                <li>Goals</li>
-                <li>Notes</li>
+                <li class="section active" id="Home">Home</li>
+                <li class="section" id="Today">Today</li>
+                <li class="section" id="Week">Week</li>
+                <li class="section" id="Goals">Goals</li>
+                <li class="section" id="Notes">Notes</li>
             </ul>
         </div>
         <div class="todo-list-container">
